codeInitial/css/styleAcceuil.css
html, body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-y: scroll;
  background-image: url('../img/Background2.png');
}


  body{
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    margin-left: 50px; 
    padding: 30px;
  
    font-family: monospace;
  }

h1{
    text-align: left;
    font-size: 3rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: black;
    
  }

main{
    margin: 25px;
    text-align: left;
  }

.msgBienvenue{
  margin-bottom: 50px;
}

/* Formulaire */
form{
  width: 100%;
  border-radius: 10px;
  padding: 30px;
  box-shadow: 2px 4px 8px rgba(0,0,0,0.5);
  text-align: left;
  background-color: white;
  font-family: Arial, Helvetica, sans-serif;
  color: #4b0000;
}

form ul {
  list-style-type: none;
  color: #4b0000;
}

.group {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 10px;
}


label {
  width: 200px;
  text-align: left; 
  margin-right: 2px;
  margin-bottom: 5px;

}

input, textarea {
  flex: 2;
  padding: 8px;
  border: 2px solid #ccc;
  border-radius: 10px;
  margin: 5px;
  min-width: 400px;
}

#description {
  min-height: 100px;
}

/* Mise en page en colonnes */
.columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 20px;
  text-align: left;
  align-items: start;
}

.column-left {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 20px;
}

.column-right {
  display: flex;
  flex-direction: column;
  padding: 20px;
}

@media (max-width: 768px) {
  .columns {
      grid-template-columns: 1fr; /* Stack columns vertically */
  }
}

/* Boutons */
.button-container {
  display: flex;
  justify-content: flex-end;
  padding: 10px;
}

button {
  padding: 10px;
  background-color: #4b0000;
  color: #D1C7BD;
  border-radius: 5px;
  box-shadow: 2px 4px 8px rgba(0,0,0,0.5);
  border-color: none;
  cursor: pointer;
  margin: 5px;
}
button:hover {
  filter: brightness(5px);
}

 /******************************************PAGE D'ACCEUIL************************************************/
 .welcome-message {
  font-size: 24px;
  font-weight: bold;
  margin-top: 20px;
  color: black;
}

/* Boites d'informations */
.boites{
  display: flex;
  flex-direction: row;
  gap: 10px;
  margin-top: 100px;
  background-color: #f7f7f7;
}

.boite{
  background-color: transparent;
  border: 1px solid black;
  border-radius: 5px;
  padding: 20px;
  flex: 1;
  text-align: left;
}

.learnmore{
  padding: 10px;
  background-color: #4b0000;
  color: #f7f7f7;
  border-radius: 5px;
  border-color: #4b0000;
  cursor: pointer;
  margin: 5px;
}

.learnmore:hover {
  background-color: #260000;
}

